# recipe-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  askama.toml
.sqlx/: query-468d1119ac62d069f558bbb8390afb1687879362727c5123bd0baa0c1d663b75.json  query-514645eb362750f9a61f28f1a7093e9822004facd4f2736f1e8942f44cbe37d9.json  query-9dd0cbad987fa8322d04f9ed9d2c1a2f46e6bdea3af5d3196b9886a2e2896a84.json  query-a8ee8d94a13c6117026a7da14b8fecf4d870057356a2e4f1489beb71bdb6079d.json
assets/static/: recipe.css  recipes.json
assets/templates/: index.html
frontend/: Cargo.toml  index.css  index.html  rust-toolchain.toml
frontend/src/: main.rs  recipe.rs
migrations/: 0001_create_recipes.down.sql  0001_create_recipes.up.sql
src/: add-recipe.sh  api.rs  authjwt.rs  error.rs  main.rs  recipe.rs  templates.rs  web.rs
