[package]
name = "recipe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
axum = "0.8.3"
askama = "0.13.1"
mime = "0.3.17"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
fastrand = "2.3.0"
clap = { version = "4.5.37", features = ["derive"] }

[dependencies.tower-http]
version = "0.6.2"
features = ["fs", "trace"]

[dependencies.tracing-subscriber]
 version = "0.3.19"
 features = ["env-filter"]

[dependencies.sqlx]
 version = "0.8.5"
 features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "chrono", "json"]
